    Retaining bin/offlineimap as a skeletal piece only.  Contains
    about three lines of code now.  This will make many things
    easier, including debugging.
  * Added library version check to bin/offlineimap and
    offlineimap/init.py.
  * Moved __main__.ui to functions in UIBase: getglobalui() and
    setglobalui().
  * Added license comments to some source files that were missing them.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 30 Sep 2002 12:08:08 -0500

offlineimap (3.2.8) unstable; urgency=low

  * Added a work-around for some IMAP servers that respond poorly
    to LIST "" "".  It will now do LIST "" "*", for them only.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 30 Sep 2002 10:48:01 -0500

offlineimap (3.2.7) unstable; urgency=low

  * Moved executable to bin/offlineimap.  This will allow setup.py to
    properly install it as offlineimap instead of offlineimap.py.
  * Made sure executables use /usr/bin/env in bangpath.
  * Font size for Blinkenlights interface is now configurable.

 -- John Goerzen <jgoerzen@complete.org>  Thu, 19 Sep 2002 06:46:56 -0500

offlineimap (3.2.6) unstable; urgency=low

  * Changed indentation in debian/control.  Closes: #156327.
  * Removed calls to folder object deletions.  None have been implemented
    anyway.
  * folder/Maildir.py: unlink throws OSError, not IOError; fixed.
    Now handles message deleting race condition properly.
    Closes: #154497.

 -- John Goerzen <jgoerzen@complete.org>  Fri, 16 Aug 2002 17:43:19 -0500

offlineimap (3.2.5) unstable; urgency=low

  * Now handles uploading messages without Message-Id headers.
    Closes: #156022.
  * Applied patch from Tommi Virtanen that adds two new config file
    options: pythonfile and foldersort.  Fixes [complete.org #29], and
    for Debian, Closes: #155637.
  * Added documentation for the above features.
  * Even more resiliant in the face of invalid Date headers.  Closes: #155994.
