@@ -19,6 +19,7 @@
 from threading import *
 from StringIO import StringIO
 import sys, traceback, thread, profile
+from offlineimap.ui import UIBase       # for getglobalui()
 
 profiledir = None
 
@@ -82,6 +83,26 @@ def exitnotifymonitorloop(callback):
         while len(exitthreads):
             callback(exitthreads.pop(0)) # Pull off in order added!
         exitcondition.release()
+
+def threadexited(thread):
+    """Called when a thread exits."""
+    ui = UIBase.getglobalui()
+    if thread.getExitCause() == 'EXCEPTION':
+        if isinstance(thread.getExitException(), SystemExit):
+            # Bring a SystemExit into the main thread.
+            # Do not send it back to UI layer right now.
+            # Maybe later send it to ui.terminate?
+            raise SystemExit
+        ui.threadException(thread)      # Expected to terminate
+        sys.exit(100)                   # Just in case...
+        os._exit(100)
+    elif thread.getExitMessage() == 'SYNC_WITH_TIMER_TERMINATE':
+        ui.terminate()
+        # Just in case...
+        sys.exit(100)
+        os._exit(100)
+    else:
+        ui.threadExited(thread)
 
 class ExitNotifyThread(Thread):
     """This class is designed to alert a "monitor" to the fact that a thread has
